Cambios Probando ell Servidor

--- a/src/app/Componentes/abm-gestion/abm-gestion.component.html
+++ b/src/app/Componentes/abm-gestion/abm-gestion.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-        <div class="row">
+        <div class="row" style="padding-left: 30px;padding-right: 30px;">
           <div class="col-md-12" style="padding-left: 0px !important;padding-right: 0%!important;">
          
 
@@ -8,12 +8,12 @@
                 <div class="row" style="padding-top: 10px">
                         <div class="col-md-12"style="height: 200px;width: 25%; background-color: #006993">    
                             <a style=" font-size: 40px!important;  color: #FFFFFF;    display: inline-block;                    "id="Content-ser-socio" href="#!quiero-ser-socio.html" alt="CONÓZCANOS">
-                                <h4 style="font-weight: bold;font-family: 'MuseoSans300', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 90px!important;padding-left: 10%" >GESTION DE USUARIOS</h4>
+                                <h4 style="font-weight: bold;font-family: 'MuseoSans300', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 90px!important;" >GESTION DE USUARIOS</h4>
                         
                             </a>
                     </div>
-        <div class="row" style="    padding-top: 10px;padding-bottom: 10px;
-        ">
+                
+        <div class="row" style="    padding-top: 10px;padding-bottom: 10px;">
           <div class="col-md-4" style=" background-image: url(data/imgs/tramitesonline.jpg) center center no-repeat;
           background-size: cover !important;">
          <img alt="Bootstrap Image Preview" style="height:100%;width: 100% !important;" src="http://vignette1.wikia.nocookie.net/glee/images/7/79/Dark_Blue_Background_by_Vik_for_Stuff.png/revision/latest?cb=20140529222524" />
@@ -36,41 +36,6 @@
           </div>
    
         </div>
-        <div class="jumbotron" style="  background: #124465;">
-            <footer class="liquidWrapper">
-                <div class="container" style="    display: flex;">
-                  <div class="col-xs-3 footer-brand boxsizingFooter">
-                    <a class="boxsizingFooter" href="#"><img src="../img/logo_w.svg" height="35px"></a>
-                  </div>
-                  <div class="boxsizingFooter" style="position: relative; height: 100%;">
-                    <div class="boxsizingFooter col-xs-2 col-xs-offset-1 " style="  box-sizing: border-box;   margin-left: 7.33333333%;
-                    ">
-                      <h5>SOBRE OSDE</h5>
-                      <ul class="">
-                        <li><a href="#!conozca-osde.html">Conocé OSDE</a></li>
-                        <li><a href="#!trabajar-en-osde.html">Quiero trabajar en OSDE</a></li>
-                        <li><a href="http://www.binariaseguros.com.ar/bifurcador.asp">Binaria Seguros</a></li>
-                        <li><a href="http://www.interturis.com.ar/">Interturis</a></li>
-                        <li><a href="http://www.urg.com.ar">URG Urgencias</a></li>
-                        <li><a href="http://www.fundacionosde.com.ar/">Fundación OSDE</a></li>
-                      </ul>
-                    </div>
-                  
-                   
-                    <div class="footerInf liquidWrapper">
-                      <div class="legales">
-                        <p>©OSDE 2015 - Todos los derechos reservados - Av. Leandro N. Alem 1067 - Piso 9 - C1001AAF - Buenos Aires - 0800 555 OSDE (6733)<br>Superintendencia de Servicios de Salud - Órgano de Control de Obras Sociales y Entidades de Medicina Prepaga - 0800-222-SALUD (72583) - <a href="http://www.sssalud.gob.ar" target="_blank" class="link_footer" style="font-size: 9px;">www.sssalud.gob.ar</a> - R.N.E.M.P. (Prov.) 1408 - R.N.O.S. 4-0080-0<br></p>
-                      </div>
-                      <div id="logotipos">
-                        <div class="pdp"><a target="_blank" href="http://ssl.comodo.com/"></a></div>
-                        <div class="certisur"><a href="#!osde-direccion-nacional-de-datos-personales.html"></a></div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </footer>
-
-          </div>
-
+     
 
       </div>
