--- a/src/app/Componentes/edit-especialista/edit-especialista.component.html
+++ b/src/app/Componentes/edit-especialista/edit-especialista.component.html
@@ -6,10 +6,10 @@
   </nav>
   <div class="page-content">
     <div class="row">
-      <div class="col col-md-4">
+      <!-- <div class="col col-md-4">
         <img class="img-avatar" [src]="item.avatar">
         <button mat-stroked-button class="change-img-button" color="primary" (click)="openDialog()">Change Avatar</button>
-      </div>
+      </div> -->
       <div class="col col-md-8">
 
         <form class="edit-form" [formGroup]="exampleForm" novalidate (ngSubmit)="onSubmit(exampleForm.value)">
