--- a/src/app/Componentes/sala-deespera/sala-deespera.component.html
+++ b/src/app/Componentes/sala-deespera/sala-deespera.component.html
@@ -1,3 +1,41 @@
-<p>
-  sala-deespera works!
-</p>
+<div class="container-fluid">
+    <div class="row" style="padding-left: 30px;padding-right: 30px;">
+      <div class="col-md-12" style="padding-left: 0px !important;padding-right: 0%!important;">
+     
+
+
+       
+            <div class="row" style="padding-top: 10px">
+                    <div class="col-md-12"style="height: 200px;width: 25%; background-color: #006993">    
+                        <a style=" font-size: 40px!important;  color: #FFFFFF;    display: inline-block;                    "id="Content-ser-socio" href="#!quiero-ser-socio.html" alt="CONÓZCANOS">
+                            <h4 style="font-weight: bold;font-family: 'MuseoSans300', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 90px!important;" >SALA DE ESPERA</h4>
+                    
+                        </a>
+                </div>
+            
+    <div class="row" style="    padding-top: 10px;padding-bottom: 10px;">
+      <div class="col-md-4" style=" background-image: url(data/imgs/tramitesonline.jpg) center center no-repeat;
+      background-size: cover !important;">
+     <img alt="Bootstrap Image Preview" style="height:100%;width: 100% !important;" src="http://vignette1.wikia.nocookie.net/glee/images/7/79/Dark_Blue_Background_by_Vik_for_Stuff.png/revision/latest?cb=20140529222524" />
+     <div class="content" >
+            <a class="nav-link active" routerLink="/listadoespecialistas">  <h1 class="text">ABM RECEPCIONISTA </h1></a>
+     </div>
+      </div>
+      <div class="col-md-4">
+          <img alt="Bootstrap Image Preview" style="height:100%;width: 100% !important;" src="http://www.zumbadancela.com/wp-content/themes/complexity-2/complexity-2/layout/images/style/bg/glossy-black.png" />
+          <div class="content" >
+              <a class="nav-link active" routerLink="/listadopacientes"> <h1 class="text">ABM CLIENTES</h1></a>
+
+           </div>
+      </div>
+      <div class="col-md-4">
+          <img alt="Bootstrap Image Preview" style="height:100%;width: 100% !important;" src="http://vignette1.wikia.nocookie.net/glee/images/7/79/Dark_Blue_Background_by_Vik_for_Stuff.png/revision/latest?cb=20140529222524" />
+          <div class="content" >
+                <a class="nav-link active" routerLink="/listadoespecialistas"> <h1 class="text">ABM ESPECIALISTAS</h1></a>
+           </div>
+      </div>
+
+    </div>
+ 
+
+  </div>
