--- a/src/app/Componentes/turnos-alta/turnos-alta.component.html
+++ b/src/app/Componentes/turnos-alta/turnos-alta.component.html
@@ -95,7 +95,7 @@
 
 
             <div class="form-group">
-              <select placeholder="cliente"  [(ngModel)]="Consultorio" class="form-control" formControlName="Consultorio"
+              <select placeholder="cliente"  [(ngModel)]="consultorio" class="form-control" formControlName="consultorio"
                 style="background-color:#007bff;border-radius: 20px;     height: 40px; font-size: 22px; border: none;  color: #fff;  ">
           
                 <option *ngFor="let tech of consultorios" [ngValue]="tech">
