--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,15 +4,10 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-12" style="padding-left: 0px !important;padding-right: 0%!important;">
-                <app-carrousel  img class="d-block w-100" alt="Carousel Bootstrap First" style="padding-left: 0px !important;padding-right: 0%!important;" ></app-carrousel>
+                <app-carrousel  img class="d-block w-100" alt="Carousel Bootstrap First" style=" color: rgb(0, 0, 0);padding-left: 0px !important;padding-right: 0%!important;" ></app-carrousel>
                     <div class="carousel-caption">
-                      <h4>
-                        First Thumbnail label
-                      </h4>
-                      <p>
-                        Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
-                      </p>
-                    </div>
+                    
+                                       </div>
               <div class="carousel slide" id="carousel-765893" style="margin-left: 0%!important;margin-right:0%!important;">
             
                  <div class="carousel-inner" style="padding-left: 0px !important;padding-right: 0%!important; ">
@@ -33,20 +28,20 @@
 
               <div class="row">
                   <div class="col-md-3"style="height: 200px;width: 25%; background-color: #006993">    
-                      <a style=" font-size: 40px!important;  color: #FFFFFF;    display: inline-block;                    "id="Content-ser-socio" href="#!quiero-ser-socio.html" alt="CONÓZCANOS">
-                          <h4 style="font-weight: bold;font-family: 'MuseoSans300', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 40px!important;padding-left: 10%" >Nuestras<br>  Sucursales</h4>
+                      <a style=" font-size: 40px!important;  color: #FFFFFF;    display: inline-block;                    "id="Content-ser-socio" routerLink="instalaciones" alt="CONÓZCANOS">
+                          <h4 style="font-weight: bold;font-family: 'MuseoSans300', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 40px!important;padding-left: 10%" >Nuestras<br> Instalaciones</h4>
                   
                       </a>
               </div>
                     <div class="col-md-3"style="height: 200px;width: 25%;background-color: #0ba3cd">    
-                        <a style=" font-size: 40px!important;  color: #FFFFFF;    display: inline-block;                    "id="Content-ser-socio" href="#!quiero-ser-socio.html" alt="CONÓZCANOS">
+                        <a style=" font-size: 40px!important;  color: #FFFFFF;    display: inline-block;                    "id="Content-ser-socio" routerLink="TurnosAlta" alt="CONÓZCANOS">
                             <h4 style="font-weight: bold;font-family: 'MuseoSans300', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 40px!important;" >Gestión<br>  Online</h4> 
                     
                         </a>
                 </div>
                 <div class="col-md-3" style="height: 200px;width: 25%;background-color: #01C8FF">
-                    <a style=" font-size: 40px!important;  color: #FFFFFF;    display: inline-block;                    "id="Content-ser-socio" href="#!quiero-ser-socio.html" alt="CONÓZCANOS">
-                        <h4 style="font-weight: bold;font-family: 'MuseoSans300', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 40px!important;" >+<br> Información</h4> 
+                    <a style=" font-size: 40px!important;  color: #FFFFFF;    display: inline-block;                    "id="Content-ser-socio" routerLink="Informacion" alt="CONÓZCANOS">
+                        <h4 style="font-weight: bold;font-family: 'MuseoSans300', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 40px!important;" > <a style="color:#01C8FF">&np </a>+<br> Información</h4> 
                 
                     </a>
                   
@@ -54,16 +49,16 @@
                 <div class="col-md-3" style="height: 200px!important;width: 25%;background-color: rgba(0, 228, 255, 1)">    
                     
                   <a style=" font-size: 40px!important;  color: #FFFFFF;    display: inline-block;                    "id="Content-ser-socio" href="#!quiero-ser-socio.html" alt="CONÓZCANOS">
-                        <h4 style="font-weight: bold;font-family: 'MuseoSans300', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 40px!important;" >Quiero <br> ser Socio</h4> 
+                        <h4 style="font-weight: bold;font-family: 'MuseoSans300', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 40px!important;" >Nuestros <br>Especialistas</h4> 
                 
                     </a>
                 </div>
               </div>
-              <div class="jumbotron">
+              <div class="jumbotron" >
 
                 <div class="col-md-12 ">
 									<div style="background:#f9f9f9; border-top:1px solid #eaeaea; height:80px;" class="textoNumeros">
-					<span>0810-444-7700</span> INFORMACIÓN 24 HS.
+					<h3>0810-444-7700</h3> INFORMACIÓN 24 HS.
             
 										<span class="margen_de_cada_lado"> | </span>
   						<span class="texto_rojo">0800-777-7800 / (011) 4344-1500</span>
@@ -95,12 +90,11 @@
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <img class="d-block w-100" alt="Carousel Bootstrap First" src="http://www.osde.com.ar/data/imgs/fumadoresv2.jpg" />
-                    <div class="carousel-caption">
-                      <h4>
-                        First Thumbnail label
-                      </h4>
-                      <p>
-                        Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+                    <div class="carousel-caption" style=" background: rgba(20, 17, 17, 0.7);" >
+                        <h4 style="color: magenta">
+                            Forma parte de nuestra comunidad asociandote y vas a poder disfrutar de increibles beneficios en tu vida.
+                          </h4>   
+                      <p style="  font-size: 40px;color: rgb(3, 1, 2)">
                       </p>
                     </div>
                   </div>
@@ -119,10 +113,8 @@
                     <img class="d-block w-100" alt="Carousel Bootstrap Third" src="https://www.layoutit.com/img/sports-q-c-1600-500-3.jpg" />
                     <div class="carousel-caption">
                       <h4>
-                        Third Thumbnail label
                       </h4>
                       <p>
-                        Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
                       </p>
                     </div>
                   </div>
@@ -134,66 +126,31 @@
           ">
             <div class="col-md-3" style=" background-image: url(data/imgs/tramitesonline.jpg) center center no-repeat;
             background-size: cover !important;">
-           <img alt="Bootstrap Image Preview" style="height:100%;width: 100% !important;" src="http://www.osde.com.ar/data/imgs/activar-la-credencial.jpg" />
+           <img alt="Bootstrap Image Preview" style="height:100%;width: 100% !important;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSBwLmy1lcUZ2yYHrE8JoHWQgnl1vPSKdIRXqPmW5PuaQ8we8uX" />
            <div class="content" >
-              <h1 class="text">Consultorios</h1>
+              <h1 class="text">Mas de 10 años construyendo Sonrisas </h1>
            </div>
             </div>
             <div class="col-md-3">
                 <img alt="Bootstrap Image Preview" style="height:100%;width: 100% !important;" src="http://www.osde.com.ar/data/imgs/tramitesonline.jpg" />
                 <div class="content" >
-                    <h1 class="text">Consultorios</h1>
+                    <h1 class="text" style=" color:magenta;height:100%" >Atencion 24hs</h1>
                  </div>
             </div>
             <div class="col-md-3">
-                <img alt="Bootstrap Image Preview" style="height:100%;width: 100% !important;" src="https://blog.klikin.com/wp-content/uploads/2018/09/TURNOS_TRABAJO.jpg" />
+                <img alt="Bootstrap Image Preview" style=" color:magenta;height:100%;width: 100% !important;" src="https://blog.klikin.com/wp-content/uploads/2018/09/TURNOS_TRABAJO.jpg" />
                 <div class="content" >
-                    <h1 class="text">Consultorios</h1>
+                    <h1 class="text" style=" color:magenta;height:100%" >Turnos Exclusivos</h1>
                  </div>
             </div>
             <div  class="col-md-3 ">
                       <img alt="Bootstrap Image Preview" style="height:100%;width: 100% !important;" src="https://greencservices.com/wp-content/uploads/2018/03/AdobeStock_114901066.jpeg" />
 
                       <div class="content" >
-                           <h1 class="text">Consultorios</h1>
+                           <h1 class="text">Tecnologia de Avanzada</h1>
                         </div>
           </div>
           </div>
-          <div class="jumbotron" style="  background: #124465;">
-              <footer class="liquidWrapper">
-                  <div class="container" style="    display: flex;">
-                    <div class="col-xs-3 footer-brand boxsizingFooter">
-                      <a class="boxsizingFooter" href="#"><img src="../img/logo_w.svg" height="35px"></a>
-                    </div>
-                    <div class="boxsizingFooter" style="position: relative; height: 100%;">
-                      <div class="boxsizingFooter col-xs-2 col-xs-offset-1 " style="  box-sizing: border-box;   margin-left: 7.33333333%;
-                      ">
-                        <h5>SOBRE OSDE</h5>
-                        <ul class="">
-                          <li><a href="#!conozca-osde.html">Conocé OSDE</a></li>
-                          <li><a href="#!trabajar-en-osde.html">Quiero trabajar en OSDE</a></li>
-                          <li><a href="http://www.binariaseguros.com.ar/bifurcador.asp">Binaria Seguros</a></li>
-                          <li><a href="http://www.interturis.com.ar/">Interturis</a></li>
-                          <li><a href="http://www.urg.com.ar">URG Urgencias</a></li>
-                          <li><a href="http://www.fundacionosde.com.ar/">Fundación OSDE</a></li>
-                        </ul>
-                      </div>
-                    
-                     
-                      <div class="footerInf liquidWrapper">
-                        <div class="legales">
-                          <p>©OSDE 2015 - Todos los derechos reservados - Av. Leandro N. Alem 1067 - Piso 9 - C1001AAF - Buenos Aires - 0800 555 OSDE (6733)<br>Superintendencia de Servicios de Salud - Órgano de Control de Obras Sociales y Entidades de Medicina Prepaga - 0800-222-SALUD (72583) - <a href="http://www.sssalud.gob.ar" target="_blank" class="link_footer" style="font-size: 9px;">www.sssalud.gob.ar</a> - R.N.E.M.P. (Prov.) 1408 - R.N.O.S. 4-0080-0<br></p>
-                        </div>
-                        <div id="logotipos">
-                          <div class="pdp"><a target="_blank" href="http://ssl.comodo.com/"></a></div>
-                          <div class="certisur"><a href="#!osde-direccion-nacional-de-datos-personales.html"></a></div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </footer>
-
-            </div>
-
+        <!-- aca va el footer -->
 
         </div>
