--- a/src/app/Componentes/asignar-tareas/asignar-tareas.component.html
+++ b/src/app/Componentes/asignar-tareas/asignar-tareas.component.html
@@ -1,4 +1,4 @@
-<div class="create-page" style="    padding: 20px 60px;
+<!-- <div class="create-page" style="    padding: 20px 60px;
 ">
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
@@ -51,4 +51,4 @@
       </div>
     </div>
   </div>
-  
+   -->
