--- a/src/app/Componentes/carrousel/carrousel.component.html
+++ b/src/app/Componentes/carrousel/carrousel.component.html
@@ -3,68 +3,70 @@
     <div>  
         <ngb-carousel style="margin-left: 0%!important;margin-right:0%!important;">  
             <ng-template ngbSlide style="margin-left: 0%!important;margin-right:0%!important;">  
-                <img style="width: 100%; height: 475.646px;" src="../assets/fondo3.jpg" alt="Delhi Metro">  
+                <img style="width: 100%; height: 475.646px;" src="http://portal.lamar.edu.mx/oficial/images/headers/odonto-1920x677.jpg" alt="Delhi Metro">  
                 <div class="content" style="  position: absolute;
                 bottom: 0;
-                background: rgb(0, 0, 0); /* Fallback color */
-                background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
+                background: rgb(0, 106, 133); /* Fallback color */
+                background: rgba(24, 21, 197, 0.5); /* Black background with 0.5 opacity */
                 color: #f1f1f1;
                 width: 100%;
                 padding: 20px;">
-                        <h1>Heading</h1>
-                        <p>Lorem ipsum dolor sit amet, an his etiam torquatos. Tollit soleat phaedrum te duo, eum cu recteque expetendis neglegentur. Cu mentitum maiestatis persequeris pro, pri ponderum tractatos ei.</p>
+                        <h1>Implantes Dentales: Información General</h1>
+                        <p>En Dental Total estamos buscando nuevos talentos, por eso si sos profesional odontólogo y querés conocer una propuesta llena de beneficios VENÃ A VISITARNOS A EXPODENT 2019!</p>
                 </div>
             </ng-template>  
             <ng-template ngbSlide>  
-                <img style="width: 100%; height: 475.646px;" src="../assets/fondo2.jpg" alt="Bangalore Metro">  
+                <img style="width: 100%; height: 475.646px;" src="https://portal.lamar.edu.mx/oficial/images/licenciaturas/1920x677_17.jpg" alt="Bangalore Metro">  
                 <div class="content" style="  position: absolute;
                 bottom: 0;
-                background: rgb(0, 0, 0); /* Fallback color */
-                background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
+                background: rgb(0, 106, 133); /* Fallback color */
+                background: rgba(24, 21, 197, 0.5); /* Black background with 0.5 opacity */
                 color: #f1f1f1;
                 width: 100%;
                 padding: 20px;">
-                        <h1>Heading</h1>
-                        <p>Lorem ipsum dolor sit amet, an his etiam torquatos. Tollit soleat phaedrum te duo, eum cu recteque expetendis neglegentur. Cu mentitum maiestatis persequeris pro, pri ponderum tractatos ei.</p>
+                        <h1> Calidad en atención </h1>
+                        <p>Trabajamos diariamente para ser la mejor opción odontológica para la comunidad enfocándonos en que la atención a nuestros pacientes sea una experiencia placentera; queremos que el resultado sea una buena sonrisa con todo lo que eso significa: no sólo la estética, sino también felicidad, el sentirse acompañado y contenido, alimentando así una
+                                fidelización a largo plazo.</p>
                 </div>
             </ng-template>  
             <ng-template ngbSlide>  
-                <img style="width: 100%; height: 475.646px;" src="../assets/fondo1.jpg" alt="Channai Metro">  
+                <img style="width: 100%; height: 475.646px;" src="https://previews.123rf.com/images/antonioguillem/antonioguillem1702/antonioguillem170200326/73036449-dentista-y-el-paciente-la-elecci%C3%B3n-de-tratamiento-en-una-consulta-con-los-equipos-m%C3%A9dicos-en-el-fondo.jpg" alt="Channai Metro">  
                 <div class="content" style="  position: absolute;
                 bottom: 0;
-                background: rgb(0, 0, 0); /* Fallback color */
-                background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
+                background: rgb(0, 106, 133); /* Fallback color */
+                background: rgba(24, 21, 197, 0.5); /* Black background with 0.5 opacity */
                 color: #f1f1f1;
                 width: 100%;
                 padding: 20px;">
-                        <h1>Heading</h1>
-                        <p>Lorem ipsum dolor sit amet, an his etiam torquatos. Tollit soleat phaedrum te duo, eum cu recteque expetendis neglegentur. Cu mentitum maiestatis persequeris pro, pri ponderum tractatos ei.</p>
+                        <h1>Implantes Dentales: Información General</h1>
+                        <p>En Dental Total estamos buscando nuevos talentos, por eso si sos profesional odontólogo y querés conocer una propuesta llena de beneficios VENÃ A VISITARNOS A EXPODENT 2019!</p>
                 </div>
             </ng-template>  
             <ng-template ngbSlide>  
-                <img style="width: 100%; height: 475.646px;"src="../assets/fondo2.jpg" alt="Jaipur Metro">  
+                <img style="width: 100%; height: 475.646px;"src="https://sararodriguezpoyo.com/wp-content/uploads/2018/06/3124.jpg" alt="Jaipur Metro">  
                 <div class="content" style="  position: absolute;
                 bottom: 0;
-                background: rgb(0, 0, 0); /* Fallback color */
-                background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
+                background: rgb(0, 106, 133); /* Fallback color */
+                background: rgba(24, 21, 197, 0.5); /* Black background with 0.5 opacity */
                 color: #f1f1f1;
                 width: 100%;
                 padding: 20px;">
-                        <h1>Heading</h1>
-                        <p>Lorem ipsum dolor sit amet, an his etiam torquatos. Tollit soleat phaedrum te duo, eum cu recteque expetendis neglegentur. Cu mentitum maiestatis persequeris pro, pri ponderum tractatos ei.</p>
+                        <h1>Blanqueamiento Dental</h1>
+                        <p>La técnica consiste en colocar un gel blanqueador sobre la superficie de los dientes y con un haz de luz frío y muy potente, se va activando el gel diente a diente.
+                                El tratamiento dura aproximadamente 1 hora y durante todo el proceso será el odontólgo el encargado de supervisar el procedimiento.</p>
                 </div>
             </ng-template>  
             <ng-template ngbSlide>  
-                <img style="width: 100%; height: 475.646px;" src="../assets/fondo3.jpg" alt="Mumbai Metro">  
+                <img style="width: 100%; height: 475.646px;" src="https://cdn2.hubspot.net/hubfs/839217/T%C3%A9rminos%20en%20Italiano%20relacionados%20con%20el%20dentista.jpg" alt="Mumbai Metro">  
                 <div class="content" style="  position: absolute;
                 bottom: 0;
-                background: rgb(0, 0, 0); /* Fallback color */
-                background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
+                background: rgb(0, 106, 133); /* Fallback color */
+                background: rgba(24, 21, 197, 0.5); /* Black background with 0.5 opacity */
                 color: #f1f1f1;
                 width: 100%;
                 padding: 20px;">
-                        <h1>Heading</h1>
-                        <p>Lorem ipsum dolor sit amet, an his etiam torquatos. Tollit soleat phaedrum te duo, eum cu recteque expetendis neglegentur. Cu mentitum maiestatis persequeris pro, pri ponderum tractatos ei.</p>
+                        <h1>Implante Dentales</h1>
+                        <p>El implante dental es una intervención quirúrgica simple e indolora que permite la reposición en forma natural de piezas dentarias ausentes o en mal estado. También se utilizan para el anclaje de prótesis removibles.</p>
                 </div>
             </ng-template>  
         </ngb-carousel>  
