--- a/src/app/Componentes/ver-turnos-paciente/ver-turnos-paciente.component.html
+++ b/src/app/Componentes/ver-turnos-paciente/ver-turnos-paciente.component.html
@@ -1,3 +1,54 @@
-<p>
-  ver-turnos-paciente works!
-</p>
+
+  <div class="list-group users-list">
+      <nav aria-label="breadcrumb">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item active" aria-current="page">Turnos Especialista</li>
+          </ol>
+        </nav>
+        
+
+    <div *ngFor="let item of turnos" class="list-group-item list-group-item-action flex-column align-items-start">
+      <div class="row">
+        <div class="col col-md-2 image-col">
+          <img class="image" [src]="item.payload.doc.data().avatar">
+        </div>
+        <div class="col col-md-8 text-col">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                  <li class="breadcrumb-item active" aria-current="page">Datos Personales</li>
+                </ol>
+              </nav>
+          <h5 class="mb-1"> Codigo de Turno</h5>
+          <small>{{item.payload.doc.data().name}}</small>
+          <h5 class="mb-1">Horario </h5>
+
+          <small    >{{item.horaTurno}}</small>
+          <small>Especialidad: {{item.payload.doc.data().especialidad}}</small>
+          <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item active" aria-current="page">Datos Laborales</li>
+            </ol>
+          </nav>
+          <h5 class="mb-1"> Dias Turno</h5>
+          <small>{{item.payload.doc.data().DiaTurno}}</small>
+          <h5 class="mb-1">Horarios</h5>
+
+          <small>{{item.payload.doc.data().horario}}</small>
+    
+        </div>
+        <div class="col col-md-8 text-col">
+          <h5 class="mb-1">{{item.payload.doc.data().name}} {{item.payload.doc.data().surname}}</h5>
+       
+        </div>
+        <div class="col col-md-2 actions-col">
+          <button class="btn btn-outline-primary action"  style=" background-color: green; color: black " (click)="habilitarTurno(item.id)" type="button">
+            <ion-icon class="icon"  name="checkmark-circle"></ion-icon>Presente
+          </button>
+          <button class="btn btn-outline-secondary action" style="font-size:bold; background-color: RED; color: black  "(click)="cancelarTurno(item.id)" type="button">
+            <ion-icon name="close-circle"></ion-icon>Ausente
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+  
