--- a/src/app/Componentes/sala-deespera/sala-deespera.component.html
+++ b/src/app/Componentes/sala-deespera/sala-deespera.component.html
@@ -5,35 +5,92 @@
 
 
        
-            <div class="row" style="padding-top: 10px">
+            <div class="row" style="padding-top: 1px">
                     <div class="col-md-12"style="height: 200px;width: 25%; background-color: #006993">    
                         <a style=" font-size: 40px!important;  color: #FFFFFF;    display: inline-block;                    "id="Content-ser-socio" href="#!quiero-ser-socio.html" alt="CONÓZCANOS">
                             <h4 style="font-weight: bold;font-family: 'MuseoSans300', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 90px!important;" >SALA DE ESPERA</h4>
                     
                         </a>
                 </div>
-            
-    <div class="row" style="    padding-top: 10px;padding-bottom: 10px;">
-      <div class="col-md-4" style=" background-image: url(data/imgs/tramitesonline.jpg) center center no-repeat;
-      background-size: cover !important;">
-     <img alt="Bootstrap Image Preview" style="height:100%;width: 100% !important;" src="http://vignette1.wikia.nocookie.net/glee/images/7/79/Dark_Blue_Background_by_Vik_for_Stuff.png/revision/latest?cb=20140529222524" />
-     <div class="content" >
-            <a class="nav-link active" routerLink="/listadoespecialistas">  <h1 class="text">ABM RECEPCIONISTA </h1></a>
-     </div>
-      </div>
-      <div class="col-md-4">
-          <img alt="Bootstrap Image Preview" style="height:100%;width: 100% !important;" src="http://www.zumbadancela.com/wp-content/themes/complexity-2/complexity-2/layout/images/style/bg/glossy-black.png" />
-          <div class="content" >
-              <a class="nav-link active" routerLink="/listadopacientes"> <h1 class="text">ABM CLIENTES</h1></a>
+                
+      <div class="row" style="padding-top: 1px;padding-bottom: 1px ;padding-right: 1px; width: 100%;">
 
-           </div>
+          <div style="font-size:bold; background-color: rgb(0, 0, 0);width:33%;">
+      
+                    
+      <div   style="width:66%;font-size:bold; background-color: rgb(0, 0, 0)">
+        </div>
+                   
+              
+         </div>
+         
+                 
+                    
+       
+     
+    </div>       
+    <div class="row" style="    padding-top: 0px;padding-bottom: 0px;">
+
+
+      <div class="col-md-4"  style="font-size:bold; background-color: rgb(0, 0, 0)">
+          <div class="row"  style="font-size:bold; background-color: rgb(0, 0, 0)">
+              <div class="col col-md-4 image-col" style="  padding-right:0px !important; padding-left: 0px !important">
+                  <p align="center" class="btn btn-outline-secondary action" style=" font-size:25px;font-weight:bold; background-color: gray; color: black;width:100%;height:100%; ">
+              CONSULTORIO
+              </p>
+            </div>
+              <div class="col col-md-8 text-col " style="  padding-right:0px !important; padding-left: 0px !important">
+                <p  align="center"style="font-size:25px;font-weight:bold; background-color:gray; color: black;width:100%;height:100%; " >
+                TURNO
+                </p >
+               
+             
+          
+              </div>
+             
+            </div>
+            <div *ngFor="let item of turnos;let i = index"   style="font-size:bold; background-color: rgb(0, 0, 0)">
+                <div class="row" *ngIf="i==0"  style="font-size:bold;padding: 0px !important; background-color: rgb(0, 0, 0)">
+                    <div class="col col-md-4 image-col" style="  padding-right:0px !important; padding: 0px !important">
+                        <p align="center" class="btn btn-outline-secondary action" style=" font-size:95px;font-weight:bold; background-color: RED; color: black;width:100%;height:100%; " >
+                            {{i}}
+                    </p>
+                  </div>
+                    <div class="col col-md-8 text-col " style="  padding-right:0px !important; padding-left: 0px !important">
+                      <p align="center" style="font-size:95px;font-weight:bold; background-color: rgb(7, 1, 1); color: rgb(7, 207, 74);width:100%;height:100%; " >
+                      1000
+                      </p >
+                     
+                   
+                
+                    </div>
+                 
+                </div>
+              </div>
+          <div *ngFor="let item of turnos;let i = index"   style="font-size:bold; background-color: rgb(0, 0, 0)">
+              <div class="row" *ngIf="0< i && i<=2"  style="font-size:bold;padding: 0px !important; background-color: rgb(0, 0, 0)">
+                  <div class="col col-md-4 image-col" style="  padding-right:0px !important; padding: 0px !important">
+                      <p align="center" class="btn btn-outline-secondary action" style=" font-size:55px;font-weight:bold; background-color: RED; color: black;width:100%;height:100%; ">
+                          {{i}}
+                  </p>
+                </div>
+                  <div class="col col-md-8 text-col " style="  padding-right:0px !important; padding-left: 0px !important">
+                    <p align="center" style="font-size:55px;font-weight:bold; background-color: rgb(25, 0, 255); color: rgb(92, 92, 92);width:100%;height:100%; " >
+                    1000
+                    </p >
+                   
+                 
+              
+                  </div>
+               
+              </div>
+            </div>
+    
       </div>
-      <div class="col-md-4">
-          <img alt="Bootstrap Image Preview" style="height:100%;width: 100% !important;" src="http://vignette1.wikia.nocookie.net/glee/images/7/79/Dark_Blue_Background_by_Vik_for_Stuff.png/revision/latest?cb=20140529222524" />
-          <div class="content" >
-                <a class="nav-link active" routerLink="/listadoespecialistas"> <h1 class="text">ABM ESPECIALISTAS</h1></a>
-           </div>
+      <div class="col-md-8">
+          <app-carrousel  img class="d-block w-100" alt="Carousel Bootstrap First" style=" color: rgb(0, 0, 0);padding-left: 0px !important;padding-right: 0%!important;" ></app-carrousel>
       </div>
+
 
     </div>
  
